[package]
name = "dao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
lazy_static = "*"
anyhow = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*" 
chrono = { version = "*", features = ["serde"] }
tokio = { version = "*", features = ["full"] }
async-trait = "*"
serde_yaml = "*"
sqlx = { version = "*", features = [ "runtime-tokio", "tls-rustls", "sqlite", "chrono" ] }
